@@ -9,7 +9,9 @@
 	function advanced_notifications_init(){
 		// default object notifications
 		elgg_register_event_handler("create", "object", "advanced_notifications_create_object_event_handler");
+		elgg_register_event_handler("publish", "object", "advanced_notifications_create_object_event_handler");
 		elgg_unregister_event_handler("create", "object", "object_notifications");
+		elgg_unregister_event_handler("publish", "object", "object_notifications");
 		
 		// group forum topic notifications
 		elgg_register_event_handler("create", "annotation", "advanced_notifications_create_annotation_event_handler");
@@ -24,6 +26,6 @@
 			elgg_register_plugin_hook_handler("register", "menu:filter", "advanced_notifications_filter_menu_hook");
 	
 			elgg_register_plugin_hook_handler("route", "activity", "advanced_notifications_route_hook");
-		}		
+		}
 	}
 	
